--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
-	"ownerid": "166304313004523520",
+	"ownerid": "455322915471097857",
 	"modrolename": "Staff role name",
 	"adminrolename": "Admin role name",
 	"overlordrolename": "Gaylord",
-	"prefix": "Your bot's prefix",
-	"token": "Your bot's token here",
+	"prefix": "!",
+	"token": "",
 }
